--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.8",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "firebase": "^7.8.1",
+    "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-cropper": "^1.3.0",
-    "react-image-crop": "^8.5.0"
+    "react-dom": "^16.13.0",
+    "react-image-crop": "^8.5.0",
+    "react-masonry-css": "^1.0.14",
+    "react-scripts": "3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
